<resources>
    <string name="app_name">BBS</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_per_info">PerInfoActivity</string>


    <string name="CircleImageView">Copyright 2014 - 2017 Henning Dodenhof

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>

    <string name="picasso">Copyright 2013 Square, Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
    
    <string name="icheditor_android">Copyright 2015 Wasabeef

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>

    <string name="SwipyRefreshLayout">The MIT License (MIT)

Copyright (c) 2015 OrangeGangsters

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.</string>
    
    <string name="okhttp">Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>

<string name="BottomNavigation">BottomNavigation library for Android
Copyright (c) 2016 Ashok Varma (http://ashokvarma.me/).

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>


    <string name="xytitile">WM论坛协议（草案）</string>
    <string name="xycontent1">  欢迎您来到WM论坛。</string>
    <string name="xycontent2">  请您仔细阅读以下条款，如果您对本协议的任何条款表示异议，您可以选择不进入WM论坛。当您注册成功，无论是进入WM论坛，还是在WM论坛上发布任何内容（即「内容」），均意味着您（即「用户」）完全接受本协议项下的全部条款。</string>
    <string name="xycontent3">使用规则</string>
    <string name="xycontent4">  用户注册成功后，WM论坛将给予每个用户一个用户帐号及相应的密码，该用户帐号和密码由用户负责保管；用户应当对以其用户帐号进行的所有活动和事件负法律责任。用户须对在WM论坛的注册信息的真实性、合法性、有效性承担全部责任，用户不得冒充他人；不得利用他人的名义发布任何信息；不得恶意使用注册帐号导致其他用户误认；否则WM论坛有权立即停止提供服务，收回其帐号并由用户独自承担由此而产生的一切法律责任。用户直接或通过各类方式（如 RSS 源和站外 API 引用等）间接使用WM论坛服务和数据的行为，都将被视作已无条件接受本协议全部内容；若用户对本协议的任何条款存在异议，请停止使用WM论坛所提供的全部服务。WM论坛是一个信息分享、传播及获取的平台，用户通过WM论坛发表的信息为公开的信息，其他第三方均可以通过WM论坛获取用户发表的信息，用户对任何信息的发表即认可该信息为公开的信息，并单独对此行为承担法律责任；任何用户不愿被其他第三人获知的信息都不应该在WM论坛上进行发表。用户承诺不得以任何方式利用WM论坛直接或间接从事违反中国法律以及社会公德的行为，WM论坛有权对违反上述承诺的内容予以删除。
</string>
    <string name="xycontent5">  用户不得利用WM论坛服务制作、上载、复制、发布、传播或者转载如下内容：
</string>
    <string name="xycontent6">  反对宪法所确定的基本原则的；危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；损害国家荣誉和利益的；煽动民族仇恨、民族歧视，破坏民族团结的；破坏国家宗教政策，宣扬邪教和封建迷信的；散布谣言，扰乱社会秩序，破坏社会稳定的；散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；侮辱或者诽谤他人，侵害他人合法权益的；含有法律、行政法规禁止的其他内容的信息。所有用户同意遵守WM论坛社区管理规定（试行）。机构用户同意遵守WM论坛机构帐号服务协议，以及WM论坛机构帐号使用规范（试行）。WM论坛有权对用户使用WM论坛的情况进行审查和监督，如用户在使用WM论坛时违反任何上述规定，WM论坛或其授权的人有权要求用户改正或直接采取一切必要的措施（包括但不限于更改或删除用户张贴的内容、暂停或终止用户使用WM论坛的权利）以减轻用户不当行为造成的影响。
</string>
    <string name="xycontent7">知识产权
</string>
    <string name="xycontent8">  WM论坛是一个信息获取、分享及传播的平台，我们尊重和鼓励WM论坛用户创作的内容，认识到保护知识产权对WM论坛生存与发展的重要性，承诺将保护知识产权作为WM论坛运营的基本原则之一。
</string>
    <string name="xycontent9">  用户在WM论坛上发表的全部原创内容（包括但不仅限于回答、文章和评论），著作权均归用户本人所有。用户可授权第三方以任何方式使用，不需要得到WM论坛的同意。 WM论坛上可由多人参与编辑的内容，包括但不限于问题及补充说明、答案总结、话题描述、话题结构，所有参与编辑者均同意，相关知识产权归WM论坛所有。 WM论坛提供的网络服务中包含的标识、版面设计、排版方式、文本、图片、图形等均受著作权、商标权及其它法律保护，未经相关权利人（含WM论坛及其他原始权利人）同意，上述内容均不得在任何平台被直接或间接发布、使用、出于发布或使用目的的改写或再发行，或被用于其他任何商业目的。 为了促进知识的分享和传播，用户将其在WM论坛上发表的全部内容，授予WM论坛免费的、不可撤销的、非独家使用许可，WM论坛有权将该内容用于WM论坛各种形态的产品和服务上，包括但不限于网站以及发表的应用或其他互联网产品。 第三方若出于非商业目的，将用户在WM论坛上发表的内容转载在WM论坛之外的地方，应当在作品的正文开头的显著位置注明原作者姓名（或原作者在WM论坛上使用的帐号名称），给出原始链接，注明「发表于WM论坛」，并不得对作品进行修改演绎。若需要对作品进行修改，或用于商业目的，第三方应当联系用户获得单独授权，按照用户规定的方式使用该内容。 WM论坛为用户提供「保留所有权利，禁止转载」的选项。除非获得原作者的单独授权，任何第三方不得转载标注了「禁止转载」的内容，否则均视为侵权。 在WM论坛上传或发表的内容，用户应保证其为著作权人或已取得合法授权，并且该内容不会侵犯任何第三方的合法权益。如果第三方提出关于著作权的异议，WM论坛有权根据实际情况删除相关的内容，且有权追究用户的法律责任。给WM论坛或任何第三方造成损失的，用户应负责全额赔偿。 如果任何第三方侵犯了WM论坛用户相关的权利，用户同意授权WM论坛或其指定的代理人代表WM论坛自身或用户对该第三方提出警告、投诉、发起行政执法、诉讼、进行上诉，或谈判和解，并且用户同意在WM论坛认为必要的情况下参与共同维权。 WM论坛有权但无义务对用户发布的内容进行审核，有权根据相关证据结合《侵权责任法》、《信息网络传播权保护条例》等法律法规及WM论坛社区指导原则对侵权信息进行处理。
</string>
    <string name="xycontent10">个人隐私
</string>
    <string name="xycontent11"> 尊重用户个人隐私信息的私有性是WM论坛的一贯原则，WM论坛将通过技术手段、强化内部管理等办法充分保护用户的个人隐私信息，除法律或有法律赋予权限的政府部门要求或事先得到用户明确授权等原因外，WM论坛保证不对外公开或向第三方透露用户个人隐私信息，或用户在使用服务时存储的非公开内容。同时，为了运营和改善WM论坛的技术与服务，WM论坛将可能会自行收集使用或向第三方提供用户的非个人隐私信息，这将有助于WM论坛向用户提供更好的用户体验和服务质量。
</string>
    <string name="xycontent12"> 如果用户不希望被搜索引擎检索，可在「个人设置」中修改「个人信息」部分的设置，对于站外的用户与搜索引擎，你的姓名会显示为「WM论坛用户」，头像图片也将被隐藏。
</string>
    <string name="xycontent13">侵权举报
</string>
    <string name="xycontent14">处理原则
</string>
    <string name="xycontent15"> WM论坛作为知识讨论社区，高度重视自由表达和个人、企业正当权利的平衡。依照法律规定删除违法信息是WM论坛社区的法定义务，WM论坛社区亦未与任何中介机构合作开展此项业务。
</string>
    <string name="xycontent16">受理范围
</string>
    <string name="xycontent17"> 受理WM论坛社区内侵犯企业或个人合法权益的侵权举报，包括但不限于涉及个人隐私、造谣与诽谤、商业侵权。
</string>
    <string name="xycontent18"> 涉及个人隐私：发布内容中直接涉及身份信息，如个人姓名、家庭住址、身份证号码、工作单位、私人电话等详细个人隐私；造谣、诽谤：发布内容中指名道姓（包括自然人和企业）的直接谩骂、侮辱、虚构中伤、恶意诽谤等；商业侵权：泄露企业商业机密及其他根据保密协议不能公开讨论的内容。
</string>
    <string name="xycontent19">举报条件
</string>
    <string name="xycontent20"> 如果个人或单位发现WM论坛上存在侵犯自身合法权益的内容，请与WM论坛取得联系（邮箱：646608986@qq.com）。为了保证问题能够及时有效地处理，请务必提交真实有效、完整清晰的材料，否则不予受理。请使用以下格式（包括各条款的序号）：
</string>
    <string name="xycontent21"> 权利人对涉嫌侵权内容拥有商标权、著作权和/或其他依法可以行使权利的权属证明；如果举报人非权利人，请举报人提供代表企业进行举报的书面授权证明。充分、明确地描述侵犯了权利人合法权益的内容，提供涉嫌侵权内容在WM论坛上的具体页面地址，指明涉嫌侵权内容中的哪些内容侵犯了上述列明的权利人的合法权益；权利人具体的联络信息，包括姓名、身份证或护照复印件（对自然人）、单位登记证明复印件（对单位）、通信地址、电话号码、传真和电子邮件；
</string>
    <string name="xycontent22"> 在侵权举报中加入如下关于举报内容真实性的声明：
</string>
    <string name="xycontent23"> 我本人为所举报内容的合法权利人；我举报的发布在WM论坛社区中的内容侵犯了本人相应的合法权益；如果本侵权举报内容不完全属实，本人将承担由此产生的一切法律责任。
</string>
    <string name="xycontent24">处理流程
</string>
    <string name="xycontent25"> 出于网络社区的监督属性，并非所有申请都必须受理。WM论坛自收到举报邮件七个工作日内处理完毕并给出回复。处理期间，不提供任何电话、邮件及其他方式的查询服务。
</string>
    <string name="xycontent26"> 出现WM论坛已经删除或处理的内容，但是百度、谷歌等搜索引擎依然可以搜索到的现象，是因为百度、谷歌等搜索引擎自带缓存，此类问题WM论坛无权也无法处理，因此相关申请不予受理。
</string>
    <string name="xycontent27"> 此为WM论坛社区唯一的官方的侵权投诉渠道，暂不提供其他方式处理此业务。
</string>
    <string name="xycontent28"> 用户在WM论坛中的商业行为引发的法律纠纷，由交易双方自行处理，与WM论坛无关。
</string>
    <string name="xycontent29">免责申明
</string>
    <string name="xycontent30"> WM论坛不能对用户发表的回答或评论的正确性进行保证。用户在WM论坛发表的内容仅表明其个人的立场和观点，并不代表WM论坛的立场或观点。作为内容的发表者，需自行对所发表内容负责，因所发表内容引发的一切纠纷，由该内容的发表者承担全部法律及连带责任。WM论坛不承担任何法律及连带责任。WM论坛不保证网络服务一定能满足用户的要求，也不保证网络服务不会中断，对网络服务的及时性、安全性、准确性也都不作保证。对于因不可抗力或WM论坛不能控制的原因造成的网络服务中断或其它缺陷，WM论坛不承担任何责任，但将尽力减少因此而给用户造成的损失和影响。
</string>
    <string name="xycontent31">协议修改
</string>
    <string name="xycontent32"> 根据互联网的发展和有关法律、法规及规范性文件的变化，或者因业务发展需要，WM论坛有权对本协议的条款作出修改或变更，一旦本协议的内容发生变动，WM论坛将会直接在WM论坛网站上公布修改之后的协议内容，该公布行为视为WM论坛已经通知用户修改内容。WM论坛也可采用电子邮件或私信的传送方式，提示用户协议条款的修改、服务变更、或其它重要事项。如果不同意WM论坛对本协议相关条款所做的修改，用户有权并应当停止使用WM论坛。如果用户继续使用WM论坛，则视为用户接受WM论坛对本协议相关条款所做的修改。</string>

    <string name="bbxx1">功能尚未十分完善。实现了登录、注册、短息验证、发帖、回帖、关注、富文本等功能。但是暂不支持删除自己所发的帖子与收藏的帖子。同时一些功能使用第三方框架完成，详情见开源许可。</string>
</resources>
