<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_yhxy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yctu.bbs.utilactivity.YHXYActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <TextView
                android:textColor="#653456"
                android:layout_margin="8dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="28sp"
                android:text="@string/xytitile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6" />

            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7" />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />





            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:textColor="#555666"
                android:text="@string/xycontent32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
