<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_kyxk"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yctu.bbs.utilactivity.KYXKActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="24sp"
                    android:textColor="#333333"
                    android:text="CircleImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4" />

                <TextView
                    android:layout_margin="8dp"
                    android:textColor="#666666"
                    android:text="@string/CircleImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3" />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="24sp"
                    android:textColor="#333333"
                    android:text="Picasso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     />

                <TextView
                    android:layout_margin="8dp"
                    android:textColor="#666666"
                    android:text="@string/picasso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     />
            </LinearLayout>


            <LinearLayout
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="24sp"
                    android:textColor="#333333"
                    android:text="Richeditor-android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:layout_margin="8dp"
                    android:textColor="#666666"
                    android:text="@string/icheditor_android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     />
            </LinearLayout>


            <LinearLayout
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="24sp"
                    android:textColor="#333333"
                    android:text="SwipyRefreshLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     />

                <TextView
                    android:layout_margin="8dp"
                    android:textColor="#666666"
                    android:text="@string/SwipyRefreshLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="24sp"
                    android:textColor="#333333"
                    android:text="Okhttp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:layout_margin="8dp"
                    android:textColor="#666666"
                    android:text="@string/okhttp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="24sp"
                    android:textColor="#333333"
                    android:text="BottomNavigation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:layout_margin="8dp"
                    android:textColor="#666666"
                    android:text="@string/BottomNavigation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
